force-app/main/default/objects/Project_Resources__c/fields/CostByResource__c.field-meta.xml
<CustomField>
    <fullName>CostByResource__c</fullName>
    <formula>Assigned_Hours__c  *  RateByHourUsers__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CostByResource</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>