force-app/main/default/objects/Project_Resources__c/fields/Id__c.field-meta.xml
<CustomField>
    <fullName>Id__c</fullName>
    <formula>Resource__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IdFromUser</label>
    <type>Text</type>
</CustomField>