force-app/main/default/objects/Project_Resources__c/fields/Is_Squad_Leader__c.field-meta.xml
<CustomField>
    <fullName>Is_Squad_Leader__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Squad Leader</label>
    <type>Checkbox</type>
</CustomField>