force-app/main/default/objects/Project_Resources__c/fields/ProjectLineItem__c.field-meta.xml
<CustomField>
    <fullName>ProjectLineItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ProjectLineItem</label>
    <referenceTo>ProjectLineItem__c</referenceTo>
    <relationshipName>Project_Resources</relationshipName>
    <type>Lookup</type>
</CustomField>