force-app/main/default/objects/Project_Resources__c/fields/RateByHourUsers__c.field-meta.xml
<CustomField>
    <fullName>RateByHourUsers__c</fullName>
    <formula>Resource__r.Rate_Hour__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RateByHourUsers</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>