force-app/main/default/objects/Project_Resources__c/fields/Resource__c.field-meta.xml
<CustomField>
    <fullName>Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resource</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Project Resources</relationshipLabel>
    <relationshipName>Project_Resources</relationshipName>
    <type>Lookup</type>
</CustomField>