force-app/main/default/objects/Project_Resources__c/fields/Resource_Name__c.field-meta.xml
<CustomField>
    <fullName>Resource_Name__c</fullName>
    <formula>$User.FirstName  + &quot; &quot; + $User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Resource Name</label>
    <type>Text</type>
</CustomField>