force-app/main/default/objects/Project_Resources__c/fields/Rol__c.field-meta.xml
<CustomField>
    <fullName>Rol__c</fullName>
    <formula>Resource__r.UserRole.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rol</label>
    <type>Text</type>
</CustomField>