force-app/main/default/objects/Project_Resources__c/validationRules/paradox_date.validationRule-meta.xml
<ValidationRule>
    <fullName>paradox_date</fullName>
    <active>true</active>
    <errorConditionFormula>Start_Date__c  &gt;  End_Date__c</errorConditionFormula>
    <errorMessage>La fecha de inicio no puede ser mayor a la fecha de cierre</errorMessage>
</ValidationRule>