force-app/main/default/objects/Project_Resources__c/validationRules/Project_in_progress.validationRule-meta.xml
<ValidationRule>
    <fullName>Project_in_progress</fullName>
    <active>false</active>
    <errorConditionFormula>Text(Project__r.Status__c) = &apos;In progress&apos;</errorConditionFormula>
    <errorDisplayField>Assigned_Hours__c</errorDisplayField>
    <errorMessage>No se pueden alocar recursos a un projecto en progreso</errorMessage>
</ValidationRule>