force-app/main/default/objects/Project_Resources__c/validationRules/RolWrong.validationRule-meta.xml
<ValidationRule>
    <fullName>RolWrong</fullName>
    <active>false</active>
    <errorConditionFormula>Rol__c  &lt;&gt;  TEXT(ProjectLineItem__r.Rol__c)</errorConditionFormula>
    <errorMessage>El rol del proyectoLineItem no es aceptable</errorMessage>
</ValidationRule>