force-app/main/default/objects/Project_Resources__c/validationRules/Start_date_1.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_date_1</fullName>
    <active>true</active>
    <errorConditionFormula>Start_Date__c  &lt;  Project__r.Start_Date__c</errorConditionFormula>
    <errorMessage>La fecha de inicio no puede ser menor a la de inicio de proyecto</errorMessage>
</ValidationRule>