force-app/main/default/objects/Project_Resources__c/validationRules/start_date_2.validationRule-meta.xml
<ValidationRule>
    <fullName>start_date_2</fullName>
    <active>true</active>
    <errorConditionFormula>Start_Date__c  &gt;  Project__r.End_Date__c</errorConditionFormula>
    <errorMessage>La fecha de inicio no puede ser mayor a la de cierre de proyecto.</errorMessage>
</ValidationRule>