force-app/main/default/objects/Project_Resources__c/listViews/My_Projects.listView-meta.xml
<ListView>
    <fullName>My_Projects</fullName>
    <columns>Project__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Assigned_Hours__c</columns>
    <filterScope>Everything</filterScope>
    <label>My Projects</label>
</ListView>